exchanger/crates/ui/tests/snapshots/snapshots__cancelled_flow.snap
---
source: crates/ui/tests/snapshots.rs
expression: "both(p, q)"
---
### plain
--- html
Отменил. Когда будете готовы — пришлите чек или ссылку на счёт.
--- keyboard: none

### premium
--- html
Отменил. Когда будете готовы — пришлите чек или ссылку на счёт.
--- keyboard: none
