exchanger/crates/ui/tests/snapshots/snapshots__cancelled_order.snap
---
source: crates/ui/tests/snapshots.rs
expression: "both(p, q)"
---
### plain
--- html
Заявка <code>A1B2C3D4E5</code> отменена. Деньги не списаны.
--- keyboard: none

### premium
--- html
Заявка <code>A1B2C3D4E5</code> отменена. Деньги не списаны.
--- keyboard: none
