exchanger/crates/ui/tests/snapshots/snapshots__help.snap
---
source: crates/ui/tests/snapshots.rs
expression: "both(p, q)"
---
### plain
--- html
<b>Помощь</b>
• Пришлите чек или ссылку на счёт — это всё, что нужно.
• Чек можно создать прямо здесь: <code>@send 10usdt</code> или <code>@xrocket 10</code>.
• Деньги в пути? Номер заявки есть в её сообщении — по нему найдём всё.
• Вопрос оператору: нажмите кнопку ниже и приложите номер заявки.
• Мы <b>никогда</b> не пишем первыми и не просим пароли, PIN и коды от кошельков.
--- keyboard: inline
[{"callback_data":"support","style":"primary","text":"💬 Написать оператору"}]

### premium
--- html
<b>Помощь</b>
• Пришлите чек или ссылку на счёт — это всё, что нужно.
• Чек можно создать прямо здесь: <code>@send 10usdt</code> или <code>@xrocket 10</code>.
• Деньги в пути? Номер заявки есть в её сообщении — по нему найдём всё.
• Вопрос оператору: нажмите кнопку ниже и приложите номер заявки.
• Мы <b>никогда</b> не пишем первыми и не просим пароли, PIN и коды от кошельков.
--- keyboard: inline
[{"callback_data":"support","icon_custom_emoji_id":"5368000000000000010","style":"primary","text":"Написать оператору"}]
